--- a/style.css
+++ b/style.css
@@ -1,37 +1,3 @@
-#pcs {
-  width: 100%;
-  height: auto;
-  /*opacity: 0.8;*/
-  text-align: center;
-  bottom: 0;
-  padding: 0px 0px 0px 0px;
-  margin: 0px 0px 0px 0px;
-}
-/*
-.header {
-  background-color: rgb(61, 60, 60);
-  height: 50px;
-  width: 100%;
-
-}
-*/
-.item1 {
-  background: rgb(7, 7, 175);
-  display: grid;
-  align-items: center;
-  width: 100%;
-  min-height: 63px;
-  grid-template-columns: repeat(auto-fill, minmax(60px, 1fr));
-  grid-template-rows: 1fr;
-  grid-gap: 10px;
-}
-
-/*
-#mtec {
-  background-color: grey;
-  height: 100px;
-}
-*/
 .nav {
 
   min-height: 25px;
@@ -43,52 +9,12 @@
   grid-template-rows: 1fr;
   grid-gap: 60px;
 }
-/*
-nav {
-  background-color: rgb(67, 98, 122);
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  display: inline;
-}
-*/
-
 .home, .about, .contact {
   row-gap: 30px;
-  font-size: 30px;
+  font-size: 25px;
   color: #ececec;
 }
 
-ul {
-  color: #ececec;
-}
-
-body {
-  background-color: #ececec;
-  color: rgb(58, 57, 57);
-  margin: 30px 30px 30px 30px;
-}
-.mission {
-  position: relative;
-  width: 500px;
-  height: 500px;
-  margin-left: 35%;
-  margin-right: ;
-  margin-bottom: 20%;
-  background-color: rgba(255, 255, 0, 0.633);
-  border-style: solid;
-  text-align: center;
-  top: 150px;
-}
-.footer {
-  background-color: rgb(61, 60, 60);
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  text-align: center;
-  color: white;
 #pcs {
   width: 100%;
   height: auto;
@@ -98,14 +24,6 @@ body {
   padding: 0px 0px 0px 0px;
   margin: 0px 0px 0px 0px;
 }
-/*
-.header {
-  background-color: rgb(61, 60, 60);
-  height: 50px;
-  width: 100%;
-
-}
-*/
 .item1 {
   background: rgb(7, 7, 175);
   display: grid;
@@ -117,44 +35,14 @@ body {
   grid-gap: 10px;
 }
 
-/*
-#mtec {
-  background-color: grey;
-  height: 100px;
-}
-*/
-.nav {
-  font-size: 70px;
-  min-height: 25px;
-  width: 100%;
-  background-color: rgb(61, 60, 60);
-  color: whitesmoke;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(60px, 1fr));
-  grid-template-rows: 1fr;
-  grid-gap: 10px;
-}
-/*
-nav {
-  background-color: rgb(67, 98, 122);
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  display: inline;
-}
-*/
-
-.home, .about, .contact {
-  display: ;
-
-  font-size: 20px;
+ul {
   color: #ececec;
-  
 }
 
 body {
-  background-color: #ececec;
+  background-image: url("Images/graphicbackground.jpg");
+  z-index: 4;
+  /*background-color: #ececec;*/
   color: rgb(58, 57, 57);
   margin: 30px 30px 30px 30px;
 }
@@ -170,6 +58,7 @@ body {
   text-align: center;
   top: 150px;
 }
+
 .footer {
   background-color: rgb(61, 60, 60);
   position: fixed;
