--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.nav {
+/* .nav {
 
   min-height: 25px;
   width: 100%;
@@ -8,22 +8,29 @@
   grid-template-columns: repeat(auto-fill, minmax(60px, 1fr));
   grid-template-rows: 1fr;
   grid-gap: 60px;
+} */
+
+body {
+  background: url("PCs.jpeg");
+  /* max-width: 100%;
+  height: 100%; */
+  background-size: cover;
 }
-.home, .about, .contact {
+/* .home, .about, .contact {
   row-gap: 30px;
   font-size: 25px;
   color: #ececec;
-}
-#pcs {
+} */
+/* #pcs {
   width: 100%;
   height: auto;
   /*opacity: 0.8;*/
-  text-align: center;
+  /* text-align: center;
   bottom: 0;
   padding: 0px 0px 0px 0px;
   margin: 0px 0px 0px 0px;
-}
-.item1 {
+} */ */
+/* .item1 {
   background: rgb(2, 2, 108);
   display: grid;
   align-items: center;
@@ -33,37 +40,13 @@
   grid-template-rows: 1fr;
   grid-gap: 10px;
   margin: auto;
-}
-#ourservices {
-  color: #ececec;
-  margin: auto;
-  font-size: large;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+} */
+
 ul {
   color: #ececec;
 }
-body {
-  background-image: url("Images/graphicbackground.jpg");
-  z-index: 4;
-  /*background-color: #ececec;*/
-  color: rgb(58, 57, 57);
-  margin: 30px 30px 30px 30px;
-}
-.mission {
-  position: relative;
-  width: 500px;
-  height: 500px;
-  margin-left: 35%;
-  margin-right: ;
-  margin-bottom: 20%;
-  background-color: rgba(255, 255, 0, 0.633);
-  border-style: solid;
-  text-align: center;
-  top: 150px;
-}
+
+
 .footer {
   background-color: rgb(61, 60, 60);
   position: fixed;
