--- a/style.css
+++ b/style.css
@@ -9,12 +9,21 @@
   grid-template-rows: 1fr;
   grid-gap: 60px;
 } */
-
+* {
+  box-sizing: border-box;
+  margin: 0;
+  margin: 0;
+}
 body {
-  background: url("PCs.jpeg");
+  
   /* max-width: 100%;
   height: 100%; */
   background-size: cover;
+  
+}
+img {
+  width: 100%;
+  height: 100vh;
 }
 /* .home, .about, .contact {
   row-gap: 30px;
@@ -47,7 +56,7 @@ ul {
 }
 
 
-.footer {
+/* .footer {
   background-color: rgb(61, 60, 60);
   position: fixed;
   left: 0;
@@ -55,4 +64,25 @@ ul {
   width: 100%;
   text-align: center;
   color: white;
+} */
+#the-footer {
+  background: #263238;
+  color: white;
+  padding: 50px 0;
+  font-size: 13px;
+}
+
+#the-footer h6 {
+  color: #1E88E5;
+}
+#the-footer a {
+  color: #CFD8DC;
+}
+/* Using pure CSS to get rid of underline text in footer. */
+.list-unstyled li a {
+  text-decoration: none;
+}
+.footericon {
+  font-size: 96px;
+  color: #fd7e14;
 }
