--- a/style.css
+++ b/style.css
@@ -1,14 +1,3 @@
-/* .nav {
-
-  min-height: 25px;
-  width: 100%;
-  background-color: rgb(61, 60, 60);
-  color: whitesmoke;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(60px, 1fr));
-  grid-template-rows: 1fr;
-  grid-gap: 60px;
-} */
 * {
   box-sizing: border-box;
   margin: 0;
@@ -21,50 +10,14 @@ body {
   background-size: cover;
   
 }
+#nerdApp {
+  color: #e60279;
+}
 img {
   width: 100%;
   height: 100vh;
 }
-/* .home, .about, .contact {
-  row-gap: 30px;
-  font-size: 25px;
-  color: #ececec;
-} */
-/* #pcs {
-  width: 100%;
-  height: auto;
-  /*opacity: 0.8;*/
-  /* text-align: center;
-  bottom: 0;
-  padding: 0px 0px 0px 0px;
-  margin: 0px 0px 0px 0px;
-} */ */
-/* .item1 {
-  background: rgb(2, 2, 108);
-  display: grid;
-  align-items: center;
-  width: 100%;
-  min-height: 63px;
-  grid-template-columns: repeat(auto-fill, minmax(60px, 1fr));
-  grid-template-rows: 1fr;
-  grid-gap: 10px;
-  margin: auto;
-} */
 
-ul {
-  color: #ececec;
-}
-
-
-/* .footer {
-  background-color: rgb(61, 60, 60);
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  text-align: center;
-  color: white;
-} */
 #the-footer {
   background: #263238;
   color: white;
